--- a/.classpath
+++ b/.classpath
@@ -21,5 +21,7 @@
 	<classpathentry kind="lib" path="/home/grantdmckenzie/Downloads/tomcat-catalina-7.0.0-sources.jar"/>
 	<classpathentry kind="lib" path="/home/grantdmckenzie/Downloads/postgresql-9.3-1100.jdbc3.jar"/>
 	<classpathentry kind="lib" path="/home/grantdmckenzie/Downloads/slf4j-1.7.6/slf4j-api-1.7.6.jar"/>
+	<classpathentry kind="lib" path="/home/grantdmckenzie/Documents/WorkSpace/adl/WebContent/WEB-INF/lib/log4j-1.2.16.jar"/>
+	<classpathentry kind="lib" path="/home/grantdmckenzie/Downloads/slf4j-1.7.6/slf4j-simple-1.7.6.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
